search panel refactoring WIP